--- a/MeriPustakWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/MeriPustakWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MeriPustakWeb
 @using MeriPustak.Models
+@using MeriPustak.Models.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
